# zbbx-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  SECURITY.md  docker-compose.yml  product_map.example.json  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/adr/: 001-only-if-empty-cost-import.md  002-compound-hostname-cost-match.md  003-fill-cost-median.md  004-cost-audit-pipeline.md  005-export-cost-audit.md  006-bump-python-multipart.md  007-ruff-import-sort.md  008-prefix-name-match-guard.md  009-reconciliation-pass-safety.md  010-relay-and-outage-correlation.md  011-traffic-drops-skip-visibility-and-shutdown-headroom.md  012-disruption-detection-building-blocks.md  013-disruption-detection-composites-and-sortfield-fix.md  014-at-risk-skip-and-wave-defaults.md  015-name-normalization-host-floods-nic-regex.md  016-tier-presets-and-docstring-trim.md  017-schema-title-strip-cost-docstring-trim-localized-header.md  018-service-check-stale-gate.md  019-age-buckets-cascade-collapse-rollup-wontfix.md  020-disruption-wave-cohesion-and-peer-relative.md  021-max-age-recency-filter-on-clusters-and-floods.md  022-parent-subhost-canonical-id-in-cohesion-and-cluster-counts.md  023-country-input-normalization.md  024-telemetry-summary-tool-and-defensive-fastmcp-hook.md  025-evidence-based-tier-recut.md  026-diagnose-host-composite-tool.md  027-zabbix-version-introspection-and-ack-action-bits.md  028-bulk-and-subnet-diagnosis.md  029-tags-deps-and-anomaly-triggers.md  030-cost-summary-redact-partial.md  031-cve-bumps-multipart-urllib3-idna.md  032-canonical-host-groups-parent-fold.md  033-cluster-dedupe-canonical-host-name.md  034-canonical-fold-service-check-tools.md  035-eager-init-excel-fills.md  036-parent-fold-inventory-and-traffic-tools.md  037-shutdown-candidates-canonical-fold.md  038-server-name-includes-version.md  039-bulk-diagnose-prefold.md  040-traffic-drop-classifier.md  (+51 more)
scripts/: sync-mcp-label.py
src/zbbx_mcp/: __init__.py  alert_triage.py  anomaly.py  classify.py  client.py  config.py  country.py  data.py  excel.py  fetch.py  formatters.py  logging.py  resolver.py  rollback.py  server.py  tag_filter.py  uptime.py  utils.py
src/zbbx_mcp/tools/: __init__.py  alerts.py  analysis.py  audit.py  availability.py  ceo_report.py  check_flaps.py  configuration.py  correlation.py  costs.py  costs_audit.py  costs_common.py  costs_import.py  costs_summary.py  dashboard_report.py  dashboards.py  diagnose.py  discovery.py  disruption.py  domains.py  events.py  executive.py  floods.py  full_report.py  geo.py  geo_health.py  geo_traffic.py  health.py  hostgroups.py  hosts.py  html_report.py  infra_report.py  inventory.py  inventory_load.py  inventory_map.py  ip_history.py  items.py  loss_drift.py  macros.py  maintenance.py  (+22 more)
tests/: test_analytics.py  test_anomaly.py  test_api_contract_fixes.py  test_billing.py  test_canonical_folds.py  test_check_flaps.py  test_classify_products.py  test_client.py  test_config.py  test_correlation_floods.py  test_diagnose.py  test_excel.py  test_formatters.py  test_geo_country.py  test_guards.py  test_health_telemetry.py  test_logging.py  test_pathguard.py  test_problems_ack.py  test_registration.py  test_resolver.py  test_risk_recovery.py  test_rollback.py  test_server.py  test_sync_label.py  test_test_hosts.py  test_traffic_disruption.py  test_traffic_units.py  test_triage.py  test_uptime.py  test_users.py  test_utils.py  wiretest.py
