[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zbbx-mcp"
version = "1.15.2"
description = "Zabbix MCP server for Claude Code, GitHub Copilot, Codex CLI, n8n, and any MCP-compatible client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex Velesnitski" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
keywords = ["zabbix", "mcp", "monitoring", "claude", "copilot", "codex"]
dependencies = [
    "mcp>=1.0.0,<1.26.0",
    "httpx[http2]>=0.27.0",
    "openpyxl>=3.1.0",
    "sentry-sdk>=2.0",
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3,<10", "pytest-asyncio>=1,<2", "pytest-cov>=7,<8", "pygments>=2.20.0"]
lint = ["ruff>=0.4"]
typecheck = ["mypy>=1.10,<3"]

[project.urls]
Homepage = "https://github.com/velesnitski/zbbx-mcp"
Repository = "https://github.com/velesnitski/zbbx-mcp"
Issues = "https://github.com/velesnitski/zbbx-mcp/issues"
Changelog = "https://github.com/velesnitski/zbbx-mcp/blob/main/CHANGELOG.md"

[project.scripts]
zbbx-mcp = "zbbx_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["zbbx_mcp"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
# Core modules are mypy-clean (data.py, fetch.py, formatters.py, classify.py,
# config.py, client.py, server.py, logging.py, rollback.py, resolver.py,
# utils.py, excel.py). tools/* has accumulated ~180 type smells over time
# (most are `skip: set[str] = frozenset()` and `dict | list` API returns);
# fix iteratively in a follow-up rather than churn every tool in one pass.
exclude = ["src/zbbx_mcp/tools/", "tests/"]
no_strict_optional = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM102"]
